project/manifests/overlays/prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gateway
  labels:
    service: gateway
spec:
  to:
    kind: Service
    name: gateway
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
